# communication_teaching

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Serial.cpp.47D6AD43CFE3DD4E.idx  Serial.h.0FA6548C2E7F0C99.idx  native_handle_main.cpp.F41084475E2DC792.idx  native_handle_recevier.cpp.9209EA8469B2E452.idx  native_handle_sender.cpp.E6310FA948D9BC43.idx  native_system_handle.cpp.E43BF9B04F4FBC8B.idx
include/native_system_handle/: Serial.h  Socket.h
include/utils/: base64.h
script/: VirtualSerial.sh
src/: boost_serial_backend.cpp  boost_serial_console.cpp  boost_serial_receiver.cpp  boost_serial_sender.cpp  boost_serial_tester.cpp  native_handle_receiver.cpp  native_handle_sender.cpp  native_system_handle.cpp
src/Serial/: boost_serial_backend.cpp  boost_serial_console.cpp  boost_serial_receiver.cpp  boost_serial_sender.cpp
src/Socket/: Socket.cpp  boost_socket_client  boost_socket_client.cpp  boost_socket_server.cpp
src/Utils/: base64.cpp
